today css chages al model and conntors page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #43837d; }
+  background: #482b4c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #bb051b; }
+  background: #e67851; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #dfacfe; }
+  background: #30a93f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #74770c; }
+  background: #caa9cd; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c7c326; }
+  background: #749244; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #8a0d82; }
+  background: #685aa1; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c77896; }
+  background: #532281; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a77f54; }
+  background: #cab5ad; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b71bec; }
+  background: #c08a83; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #5f74a8; }
+  background: #1bf93b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #1d1356; }
+  background: #7fad7d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c9ff47; }
+  background: #0bb1ef; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #79a407; }
+  background: #4536bb; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e81b3f; }
+  background: #41ce06; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d42e7e; }
+  background: #8312a9; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #dd3564; }
+  background: #bf959d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #0735a4; }
+  background: #f37767; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #805907; }
+  background: #0aad2a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #938414; }
+  background: #b941cb; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #49192f; }
+  background: #ba3228; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #605efe; }
+  background: #b5c6a7; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #40f362; }
+  background: #b4d690; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #edf659; }
+  background: #704639; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7b799e; }
+  background: #19fd15; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #1a66d4; }
+  background: #e79070; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e91e4f; }
+  background: #50dfc0; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #41d612; }
+  background: #9a3630; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #968c71; }
+  background: #561d04; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #39e319; }
+  background: #92697b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5a4b8a; }
+  background: #924b44; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #488da7; }
+  background: #40cb04; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #8112a2; }
+  background: #dbb6e1; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #158eaf; }
+  background: #98a028; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #89f78c; }
+  background: #6b53f5; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #a41a78; }
+  background: #27028b; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #40033a; }
+  background: #01aa12; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d4781f; }
+  background: #20bf28; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #8ce9cf; }
+  background: #ec5a6b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2e8cc0; }
+  background: #c4b911; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #946fc4; }
+  background: #d6f695; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #4538ba; }
+  background: #71d662; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6f084e; }
+  background: #795194; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f062e6; }
+  background: #1e5f76; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #34d544; }
+  background: #49f83e; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #25fe0d; }
+  background: #9252c8; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #436d67; }
+  background: #7d08e7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #a66329; }
+  background: #2210b8; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #be0543; }
+  background: #16e319; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #8239bb; }
+  background: #8bdc69; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b0eb67; }
+  background: #36c42e; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #f889b1; }
+  background: #75bdd1; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4eb403; }
+  background: #b19399; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f134b7; }
+  background: #b5ba87; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #df122b; }
+  background: #2ef259; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #e5af48; }
+  background: #c06d23; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e5417b; }
+  background: #5fa1d9; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #144d75; }
+  background: #8d8186; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #bea8dc; }
+  background: #72f1a0; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c07476; }
+  background: #0e44d4; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #1ed664; }
+  background: #ce597c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #3a6176; }
+  background: #fdf844; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c30293; }
+  background: #6cb330; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #b3aa2c; }
+  background: #a0ff98; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #55bc49; }
+  background: #8c2cbe; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #161ac4; }
+  background: #3d2a62; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #60e17d; }
+  background: #84deaf; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #45e121; }
+  background: #5abac7; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a3c33f; }
+  background: #dd1dda; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #8a7274; }
+  background: #5e6fe2; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #22f486; }
+  background: #eeba78; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #af5f27; }
+  background: #7bfdaa; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #4fb426; }
+  background: #074ed9; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #404863; }
+  background: #0a354c; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #efd085; }
+  background: #2bc26a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #bacca6; }
+  background: #70adac; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #5d9545; }
+  background: #6d8d81; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #74acdd; }
+  background: #6d2129; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #bc714b; }
+  background: #bec7be; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #48c4f9; }
+  background: #4db7d0; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #92639c; }
+  background: #a24975; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #e13bb5; }
+  background: #64bd08; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #db4f37; }
+  background: #7e79c1; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #ad4d42; }
+  background: #b0ea5f; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #4e9fdb; }
+  background: #e10175; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #a6c982; }
+  background: #28af09; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #7de341; }
+  background: #4babb1; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #479fee; }
+  background: #43b35d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #87a026; }
+  background: #ba7e90; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c70dd1; }
+  background: #b37152; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #04108e; }
+  background: #2720f9; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #6c206e; }
+  background: #f85d25; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #b0ac58; }
+  background: #5d4724; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #bc05a5; }
+  background: #0c9d9c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #8b88c5; }
+  background: #4641e0; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #8d32af; }
+  background: #e8c474; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c484a8; }
+  background: #2929be; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #8fb47f; }
+  background: #c498b5; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #3aacb9; }
+  background: #688e9f; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #57f1a0; }
+  background: #2e6d30; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #73cad8; }
+  background: #988afe; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11110,7 +11110,7 @@ input[type="submit"] {
 .Connectors-top-searchbar-div .search-wrap input {
   width: 100%;
   padding: 14px 10px;
-  padding-left: 10px;
+  margin-right: 12px;
   border: 0px solid #bababa;
   padding-left: 40px; }
 
@@ -11132,12 +11132,13 @@ input[type="submit"] {
 
 .Connectors-top-searchbar-div .search-wrap {
   display: flex;
-  width: 82%;
+  width: 100%;
   position: relative; }
 
 .toggle-btn-div {
   display: flex;
-  align-items: center; }
+  align-items: center;
+  flex-basis: 250px; }
 
 .toggle-btn-div .toggle-btn {
   margin-right: 10px; }
@@ -11199,7 +11200,7 @@ input:checked + .sliders:before {
 
 .connectors-wrapper .table-innerbox {
   display: flex;
-  margin-right: 5px;
+  margin-right: -3px;
   align-items: center; }
 
 .c-green {
@@ -11222,7 +11223,7 @@ input:checked + .sliders:before {
 
 .c-orange {
   padding: 6px;
-  background: #f9cc12;
+  background: #ff8003;
   border-radius: 100%;
   display: block;
   width: 14px;
@@ -11338,7 +11339,16 @@ input:checked + .sliders:before {
   font-weight: normal !important; }
 
 .connector-config-row .form-control {
-  height: calc(1.5em + 0.50rem + 2px) !important; }
+  height: calc(1.5em + 0.5rem + 2px) !important; }
+
+.connectors-main-wrapper .parent-row td:nth-child(1) {
+  padding: 8px 0px 8px 10px !important; }
+
+.connectors-wrapper-full {
+  margin-top: 0px !important; }
+
+.red-text {
+  color: #f00f00; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -11449,13 +11459,18 @@ input:checked + .sliders:before {
     flex-direction: column; }
 
   .Connectors-top-searchbar-div .search-wrap {
-    width: 100%; }
+    width: 100%;
+    margin-bottom: 8px !important; }
 
   .toggle-btn-div {
-    margin-top: 15px; }
+    margin-top: 15px;
+    flex-basis: inherit; }
 
   .connectors-main-wrapper .inner-tab-right-section {
     margin-top: 0px !important; }
+
+  .connectors-wrapper .table-innerbox {
+    margin-right: 5px !important; }
 
   .field-large {
     width: 100% !important; }
