--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #08a5e1; }
+  background: #2ce898; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #570e86; }
+  background: #7375fc; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #6c0d01; }
+  background: #bbf0f9; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #5047c3; }
+  background: #de69e8; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #339deb; }
+  background: #91d333; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #e28c79; }
+  background: #1a17b7; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #86b24c; }
+  background: #01ec8b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b8a243; }
+  background: #64a3c9; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #0bc6e4; }
+  background: #d57ad6; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d9c91f; }
+  background: #93d4ac; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #89321b; }
+  background: #0a6a34; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #e43ced; }
+  background: #0677b3; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #22089f; }
+  background: #e36de8; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #5f4d65; }
+  background: #194f83; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #3d3f63; }
+  background: #284477; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #7729d0; }
+  background: #f73b94; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #2eca87; }
+  background: #0ead8f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #5bc9f6; }
+  background: #771631; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #03fdb0; }
+  background: #60460c; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f438fe; }
+  background: #2e5af5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #092562; }
+  background: #e56583; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #9f39eb; }
+  background: #fd2c9d; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #c911fa; }
+  background: #dd0bcf; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #76c659; }
+  background: #f8b087; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #fd9c7a; }
+  background: #e6509c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #141e71; }
+  background: #37fc82; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #133a8e; }
+  background: #35ce3b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #4257c0; }
+  background: #bb7643; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #aa9abf; }
+  background: #223e68; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d462cd; }
+  background: #d833ec; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #124d76; }
+  background: #7daeb3; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #da84a1; }
+  background: #2291f8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e0a620; }
+  background: #3c94ad; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #722ede; }
+  background: #835fec; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #c8e30b; }
+  background: #a7bf69; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #fc9f02; }
+  background: #c69769; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #2ef401; }
+  background: #105522; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #325c96; }
+  background: #1af56e; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #cf4e7a; }
+  background: #b4b2c8; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #455334; }
+  background: #1702a0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #4f67c1; }
+  background: #ed3486; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #cc3bd2; }
+  background: #da38f7; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #2cb015; }
+  background: #d9d0ed; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f585c2; }
+  background: #e5512e; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #f9ab4c; }
+  background: #f99e9a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #0d31de; }
+  background: #bd781d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #7003df; }
+  background: #33be1e; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #7bfab8; }
+  background: #ad9cc7; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #fa5c41; }
+  background: #a5a122; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #3173b1; }
+  background: #2df8f8; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #3ee8b5; }
+  background: #054fb3; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d08cf0; }
+  background: #f39fbb; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #31aad1; }
+  background: #45899e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #dc7962; }
+  background: #93be66; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8e8831; }
+  background: #e45492; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #9d197f; }
+  background: #272e05; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4a1964; }
+  background: #08fa92; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #653140; }
+  background: #8534bd; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #b9a7ed; }
+  background: #969e59; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #d3eb24; }
+  background: #4a1edd; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #4e8063; }
+  background: #199d32; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #5eb55e; }
+  background: #870975; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #9667e9; }
+  background: #347a25; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #a31b6c; }
+  background: #721dd5; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c8a464; }
+  background: #1bde7f; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #d13271; }
+  background: #a1a352; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #78e697; }
+  background: #f58c3f; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c02cc6; }
+  background: #b3b53e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #424517; }
+  background: #b0aba1; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d7b847; }
+  background: #b3c9b5; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #34c34f; }
+  background: #1316d5; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #76551b; }
+  background: #3eee1d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #1ee7d4; }
+  background: #ac2bf8; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f31efa; }
+  background: #e960db; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #5b03e3; }
+  background: #798a16; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b73226; }
+  background: #b3d485; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #39f9c0; }
+  background: #11037c; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d37738; }
+  background: #a0be54; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #e8c14c; }
+  background: #c2bd92; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #749fc9; }
+  background: #de3f56; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #5c232f; }
+  background: #bc0e8f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #f79b8f; }
+  background: #4eb67b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #319a10; }
+  background: #d96504; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #613d94; }
+  background: #29b2a2; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #beacd8; }
+  background: #0dc34c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #a7cd4a; }
+  background: #0ea67a; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #4ae483; }
+  background: #0ad052; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #12b20f; }
+  background: #167130; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #586ac5; }
+  background: #701a6c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #a1fb95; }
+  background: #78c585; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #931f6f; }
+  background: #13c786; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #476ff0; }
+  background: #6254bc; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d4ff5e; }
+  background: #2a68be; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #cdfe49; }
+  background: #ccc703; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #28d0b7; }
+  background: #5385b1; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ca2f73; }
+  background: #893625; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #0592b3; }
+  background: #424c4b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #206049; }
+  background: #c30486; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #bd2cbd; }
+  background: #bd1082; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e268c2; }
+  background: #34cb43; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11326,7 +11326,7 @@ input:checked + .sliders:before {
 
 .modal-add-connections-wrapper .adding-adapter-modal-header {
   border-bottom: 1px solid #dcdde1;
-  padding: 20px; }
+  padding: 12px 20px; }
 
 .modal-add-connections-wrapper .modal-close-btn {
   position: inherit;
@@ -11336,7 +11336,8 @@ input:checked + .sliders:before {
   margin-left: 15px; }
 
 .modal-add-connections-wrapper .adapter-modal-content-box {
-  padding: 40px; }
+  padding: 40px;
+  padding-top: 11px; }
 
 .modal-add-connections-wrapper .adapter-modal-field-row div {
   width: 100% !important; }
