--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -740,7 +740,7 @@ input:checked+.sliders:before {
 
 .modal-add-connections-wrapper .adding-adapter-modal-header {
     border-bottom: 1px solid #dcdde1;
-    padding: 20px;
+    padding: 12px 20px;
 }
 
 .modal-add-connections-wrapper .modal-close-btn {
@@ -753,6 +753,7 @@ input:checked+.sliders:before {
 
 .modal-add-connections-wrapper .adapter-modal-content-box {
     padding: 40px;
+    padding-top: 11px;
 }
 
 .modal-add-connections-wrapper .adapter-modal-field-row div {
